feat: add my location

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     >
       <a-box
         material="color: red"
-        gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"
+        gps-entity-place="latitude: 35.7057678; longitude: 139.7801474;"
         scale="30 30 30"
       ></a-box>
       <a-camera gps-camera="minDistance:30; maxDistance:100" rotation-reader> </a-camera>
